--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.1"
   }
 }
